// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array.coffee 1`] = `
arr1 = [1,2,3,4]
arr2 = [1, 2, 3, 4]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
arr1 = [1, 2, 3, 4]
arr2 = [1, 2, 3, 4]

`;

exports[`array.coffee 2`] = `
arr1 = [1,2,3,4]
arr2 = [1, 2, 3, 4]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
arr1 = [1, 2, 3, 4]
arr2 = [1, 2, 3, 4]

`;

exports[`object.coffee 1`] = `
obj1 = {a:1, b:2, c:3}.b
obj2 = { a:1, b:2, c:3 }.b
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
obj1 = { a: 1, b: 2, c: 3 }.b
obj2 = { a: 1, b: 2, c: 3 }.b

`;

exports[`object.coffee 2`] = `
obj1 = {a:1, b:2, c:3}.b
obj2 = { a:1, b:2, c:3 }.b
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
obj1 = {a: 1, b: 2, c: 3}.b
obj2 = {a: 1, b: 2, c: 3}.b

`;
